<resources>
    <string name="app_name">WhatsUpp</string>

    <!--Login Activity    -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="text_goto_signup"><u>No Account? Go to Sign-up</u></string>
    <string name="text_content_description_whatsapp_logo">WhatsApp logo</string>

    <!--Signup Activity -->
    <string name="text_goto_login"><u><![CDATA[Have email & password? Go to Log-in]]></u></string>
    <string name="button_signup">Sign Up</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_user_name">User Name</string>

    <!--Profile Activity -->
    <string name="button_update_profile">Update Profile</string>
    <string name="button_change_password">Change Password</string>
    <string name="button_delete_account">Delete Account</string>
    <string name="content_description_profile_image">Profile Image</string>

    <!-- Status fragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_update_status">Update status</string>
    <string name="hint_status">Status</string>
    <string name="content_description_status_image">Status Image</string>

    <!-- Conversations Activity -->
    <string name="hint_message">Message</string>
    <string name="button_send">Send</string>

    <!--Menus-->
    <string name="action_log_out">Log out</string>
    <string name="action_profile">Profile</string>

    <!--Contacts-->
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search name or phone…</string>

</resources>