<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".actvities.SignupActivity">

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/grid_2x"
                        android:contentDescription="@string/text_content_description_whatsapp_logo"
                        android:src="@drawable/title" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nameTIL"
                        android:layout_width="@dimen/standard_width"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imageView"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/grid_3x">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nameET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_user_name"
                            android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneTIL"
                        android:layout_width="@dimen/standard_width"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/nameTIL"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/grid_3x">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_phone_number"
                            android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailTIL"
                        android:layout_width="@dimen/standard_width"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/phoneTIL"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/grid_3x">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordTIL"
                        app:passwordToggleEnabled="true"
                        android:layout_width="@dimen/standard_width"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/emailTIL"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/grid_3x">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordET"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:id="@+id/signUpBtn"
                        style="@style/StandardButton"
                        android:layout_width="@dimen/standard_width"
                        android:layout_height="@dimen/standard_height"
                        android:layout_below="@id/passwordTIL"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="@dimen/grid_3x"
                        android:layout_marginTop="@dimen/grid_3x"
                        android:layout_marginEnd="@dimen/grid_3x"
                        android:layout_marginBottom="@dimen/grid_3x"
                        android:onClick="onSignup"
                        android:text="@string/button_signup" />

                <TextView
                        android:id="@+id/gotoLoginTv"
                        style="@style/Linktext"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/signUpBtn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="@dimen/grid_3x"
                        android:layout_marginTop="@dimen/grid_3x"
                        android:layout_marginEnd="@dimen/grid_3x"
                        android:layout_marginBottom="@dimen/grid_3x"
                        android:clickable="true"
                        android:onClick="onGoToLogin"
                        android:text="@string/text_goto_login" />

                <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/progressLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:background="@color/transparent_grey"
                        android:elevation="5dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="parent">


                    <ProgressBar
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </RelativeLayout>

        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>